--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -9,19 +9,24 @@
   --accent-color: rgb(79, 160, 251);
   --white-color: rgb(255, 255, 255);
   --black-color: rgb(0, 0, 0);
-  --accent-font-family: Inter;         /*пока что условное значение*/
+  --accent-font-family: Inter; /*пока что условное значение*/
+
+  --space-s: 5px;
+  --space-m: 12px;
+  --space-l: 24px;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   background-color: rgb(36, 36, 36);
-
-  max-width: 1280px;
-  margin: 0 auto;
 }
 
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+}
+
+* {
+  box-sizing: border-box;
 }
