--- a/src/components/ui/container/style.module.css
+++ b/src/components/ui/container/style.module.css
@@ -1,6 +1,16 @@
 .container {
+  max-width: 1200px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+  padding-right: var(--space-l);
+  padding-left: var(--space-l);
+
+  @media (max-width: 1000px) {
+    padding-right: var(--space-m);
+    padding-left: var(--space-m);
+  }
+  @media (max-width: 500px) {
+    padding-right: var(--space-s);
+    padding-left: var(--space-s);
+  }
 }
