--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -19,3 +19,8 @@ body {
 * {
   box-sizing: border-box;
 }
+
+/*! глобальный класс, который отвечает за заливку background, добавляется к тегу вне контейнера, чтобы заполнить цветом всю видимую область */
+.wrapper {
+  background-color: var(--base-background-color);
+}
