--- a/src/components/layout/header/style.module.css
+++ b/src/components/layout/header/style.module.css
@@ -1,7 +1,3 @@
-.header {
-  background-color: var(--base-background-color);
-}
-
 .header__top {
   display: flex;
   align-items: center;
@@ -13,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 2em 5em;
+  padding: 2em 0;
 }
 
 .header__content {
