--- a/src/components/blocks/test-list/style.module.css
+++ b/src/components/blocks/test-list/style.module.css
@@ -1,12 +1,23 @@
 .tests {
+  font-size: var(--text-size-base);
   background-color: var(--white-color);
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
+.tests__link {
+  background: none;
+  color: var(--link-color);
+  padding: 0;
+  text-align: start;
+  &:hover {
+    background-color: #ffffff;
+    color: var(--highlight-color);
+  }
+}
+
 .list {
   list-style: none;
-  color: var(--accent-color);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   max-width: 700px;
