--- a/src/components/ui/title/style.module.css
+++ b/src/components/ui/title/style.module.css
@@ -4,14 +4,16 @@
   margin: 0;
   padding: 0;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 3rem;
   line-height: 41px;
+  font-family: var(--font-family-titles);
 }
 
 :global .title_small {
-  font-size: 28px;
+  font-size: 2.5rem;
 }
 
 :global .title_big {
-  font-size: 44px;
+  font-size: 4.4rem;
+  text-transform: uppercase;
 }
