--- a/src/components/blocks/user-form/style.module.css
+++ b/src/components/blocks/user-form/style.module.css
@@ -1,6 +1,37 @@
+.form__wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: var(--text-size-base);
+}
+
+.form__content {
+  display: flex;
+  flex-basis: 50%;
+  flex-direction: column;
+  height: 100%;
+}
+
+.form__content p {
+  margin: 4rem 2rem 1rem 0;
+}
+
+.form__img {
+  max-width: 50%;
+  overflow: hidden;
+}
+
+.form__img img {
+  width: 100%;
+  height: 30%;
+
+  object-fit: cover;
+}
+
 .form__link {
   background-color: var(--highlight-color);
   &:hover {
     background-color: rgb(120, 98, 47, 0.7);
   }
+  margin-top: 5rem;
 }
