--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -14,6 +14,13 @@
   src: url('../fonts/Montserrat/static/Montserrat-Regular.ttf');
 }
 
+@font-face {
+  font-family: 'MontBold';
+  font-weight: 700;
+  font-style: normal;
+  src: url('../fonts/Mont/mont_heavydemo.ttf');
+}
+
 :root {
   font-family: var(--font-family-base), Arial, sans-serif;
   line-height: 1.5;
@@ -34,4 +41,9 @@ body {
 /*! глобальный класс, который отвечает за заливку background, добавляется к тегу вне контейнера, чтобы заполнить цветом всю видимую область */
 .wrapper {
   background-color: var(--base-background-color);
+}
+
+.modal_open {
+  height: 100vh;
+  overflow: hidden;
 }
