--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -6,12 +6,13 @@
   --black-color: rgb(0, 0, 0);
   --highlight-color: rgb(120, 98, 47);
   --footer-background-color: rgb(237, 214, 190);
-  --modal-background-color: rgba(84, 174, 255, 0.7);
+  --modal-background-color: rgb(105, 181, 248);
   --text-color-base: rgb(34, 34, 15);
   --link-color: rgb(84, 152, 214);
   --text-size-base: 1.7rem;
   --font-family-titles: Mont;
   --font-family-base: Montserrat;
+  --font-family-titles-bold: MontBold;
 
   --space-s: 5px;
   --space-m: 12px;
