--- a/src/components/blocks/nav/style.module.css
+++ b/src/components/blocks/nav/style.module.css
@@ -6,6 +6,7 @@ a {
 .menu__list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 0 40px;
   font-weight: 700;
   font-size: 1.8rem;
