--- a/src/components/blocks/intro/style.module.css
+++ b/src/components/blocks/intro/style.module.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 50%;
+  gap: 2rem;
 }
 
 .intro__img {
@@ -18,6 +19,7 @@
 }
 
 .intro__img img {
+  display: block;
   width: 100%;
   height: 100%;
   border-radius: 15px;
