--- a/src/components/blocks/modal/style.module.css
+++ b/src/components/blocks/modal/style.module.css
@@ -40,7 +40,7 @@
   transition:
     opacity 0.3s,
     transform 0.3s;
-  font-size: 1.5rem;
+  font-size: var(--text-size-base);
   color: var(--black-color);
 }
 
@@ -64,10 +64,11 @@
 .button__yes,
 .button__no,
 .button__back {
-  font-size: 1.6rem;
+  font-size: var(--text-size-base);
   color: var(--black-color);
   font-family: var(--font-family-titles);
   font-weight: bolder;
+
 }
 
 .button__yes,
@@ -83,5 +84,5 @@
 }
 
 .cookie_notification {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
