--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #edd6be;
+  background-color: var(--footer-background-color);
   padding: 2rem 0;
 }
 
@@ -7,8 +7,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   gap: 1rem;
-  font-size: 1.5rem;
+  font-size: var(--text-size-base);
 }
 
 .footer__wrapper p {
@@ -19,7 +20,7 @@
   height: 30px;
 }
 
-.footer__logo:hover,
+.footer__link:hover,
 .footer__createdby:hover {
   color: var(--accent-color);
 }
