--- a/src/components/ui/button/style.module.css
+++ b/src/components/ui/button/style.module.css
@@ -1,9 +1,9 @@
 .button {
   display: block;
-  font-size: 2rem;
-  max-width: 350px;
+  font-size: var(--text-size-base);
+  max-width: fit-content;
   text-align: center;
-  padding: 10px 22px;
+  padding: 1rem 2rem;
   color: var(--white-color);
   background-color: var(--accent-color);
   text-align: center;
