--- a/src/components/ui/title/style.module.css
+++ b/src/components/ui/title/style.module.css
@@ -5,17 +5,48 @@
   padding: 0;
   font-weight: 700;
   font-size: 3rem;
-  line-height: 41px;
+  line-height: 160%;
   font-family: var(--font-family-titles);
+
+  @media (max-width: 450px) {
+    font-size: 1.6rem;
+  }
+
+  @media (min-width: 451px) and (max-width: 540px) {
+    font-size: 2.5rem;
+  }
+
+  @media (min-width: 571px) and (max-width: 820px) {
+    font-size: 2.5rem;
+  }
 }
 
 :global .title_small {
   font-size: 2.5rem;
+  @media (max-width: 450px) {
+    font-size: 1.5rem;
+  }
+
+  @media (min-width: 571px) and (max-width: 820px) {
+    font-size: 2.2rem;
+  }
 }
 
 :global .title_big {
-  font-size: 4.4rem;
+  font-size: 4rem;
   text-transform: uppercase;
   line-height: 120%;
   letter-spacing: 3px;
+
+  @media (max-width: 450px) {
+    font-size: 1.7rem;
+  }
+
+  @media (min-width: 451px) and (max-width: 570px) {
+    font-size: 2.5rem;
+  }
+
+  @media (min-width: 571px) and (max-width: 820px) {
+    font-size: 3.3rem;
+  }
 }
