--- a/src/components/blocks/intro/style.module.css
+++ b/src/components/blocks/intro/style.module.css
@@ -1,3 +1,7 @@
+.intro {
+background-color: var(--base-background-color);
+}
+
 .intro__wrapper {
   display: flex;
   justify-content: space-around;
