--- a/src/components/blocks/about/style.module.css
+++ b/src/components/blocks/about/style.module.css
@@ -1,3 +1,65 @@
+.about {
+  padding-top: calc(2 * var(--space-xxl));
+  padding-bottom: calc(2 * var(--space-xxl));
+
+  @media (max-width: 800px) {
+    padding-top: calc(2 * var(--space-s));
+    padding-bottom: calc(2 * var(--space-s));
+  }
+}
+
+.about__wrapper {
+  display: flex;
+  gap: 5%;
+}
+
+.about__mobile {
+  display: none;
+}
+
+.about__left {
+  width: 250px;
+}
+
+.about__img {
+  margin: var(--space-m) auto var(--space-m);
+  max-width: 50%;
+}
+
+.about__img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.about__right {
+  width: 70%;
+}
+
 .about__text {
   font-size: var(--text-size-base);
+}
+
+.about__list {
+  list-style-type: none;
+  padding-left: 0;
+  margin-bottom: var(--space-l);
+}
+
+.about__list li {
+  margin-bottom: var(--space-s);
+}
+
+.about__list li::before {
+  content: '— ';
+}
+
+@media (max-width: 600px) {
+  .about__wrapper {
+    display: none;
+  }
+  .about__mobile {
+    display: flex;
+    flex-direction: column;
+  }
 }
