--- a/src/components/layout/header/style.module.css
+++ b/src/components/layout/header/style.module.css
@@ -1,10 +1,19 @@
 .header {
-  background-color: var(--base-background-color);
+  background-color: #fbf7f2;
+  position: sticky;
+  top: 0px;
+
+  z-index: 10;
+  transition: 0.6s all ease-in-out;
+}
+
+.header_down {
+  top: -12rem;
 }
 
 .header__wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 40px 0;
+  padding: 40px 0 20px 0;
 }
