adds burger-menu

--- a/src/components/layout/header/style.module.css
+++ b/src/components/layout/header/style.module.css
@@ -7,4 +7,9 @@
   align-items: center;
   justify-content: center;
   padding: 40px 0;
+
+  @media (max-width: 650px) {
+    padding: 0;
+    justify-content: end;
+  }
 }
