--- a/src/components/blocks/nav/style.module.css
+++ b/src/components/blocks/nav/style.module.css
@@ -1,4 +1,4 @@
-a {
+.menu__link {
   color: var(--highlight-color);
   text-decoration: none;
 }
@@ -19,4 +19,45 @@ nav::after {
   height: 2px;
   background: var(--highlight-color);
   margin: 10px auto 0;
+}
+
+.nav__desktop {
+  @media (max-width: 650px) {
+    display: none;
+  }
+}
+.nav_mobile {
+  padding-top: 1rem;
+  @media (min-width: 650px) {
+    display: none;
+  }
+}
+
+.nav_mobile__wrapper {
+  display: fixed;
+  position: absolute;
+  max-width: 320px;
+  right: 5rem;
+  font-size: var(--text-size-base);
+  z-index: 99;
+}
+
+.nav_mobile__list {
+  list-style: none;
+  display: grid;
+  gap: 1rem;
+  right: 10%;
+  width: 300px;
+  z-index: 100;
+  position: absolute;
+  background-color: var(--modal-background-color);
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px 0px rgba(61, 61, 61, 0.5);
+  padding: 2rem 2rem;
+}
+
+.nav_mobile__item {
+  border-bottom: 1px solid var(--white-color);
+  padding: 1rem 1rem;
+  color: var(--white-color);
 }
