--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -20,6 +20,15 @@
   height: 30px;
 }
 
+.footer__link,
+.footer__createdby {
+  text-decoration: none;
+}
+
+.footer__link {
+  color: var(--link-color);
+}
+
 .footer__link:hover,
 .footer__createdby:hover {
   color: var(--accent-color);
@@ -27,4 +36,5 @@
 
 .footer__copyright {
   font-size: 1.2rem;
+  text-decoration: none;
 }
