--- a/src/components/blocks/work-method/style.module.css
+++ b/src/components/blocks/work-method/style.module.css
@@ -1,4 +1,4 @@
-.method__wrapper {
+/* .method__wrapper {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -29,4 +29,67 @@
   color: var(--accent-color);
   font-weight: 400;
   margin-top: 4rem;
+} */
+.method__section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.method__img {
+  flex: 1;
+}
+
+.method__img img {
+  display: block;
+  max-width: 100%;
+}
+
+.method__content {
+  flex: 1;
+  max-width: 50%;
+  margin: 2rem;
+  font-size: var(--text-size-base);
+}
+
+.method__content p {
+  margin-bottom: 1rem;
+}
+
+.method__highlight {
+  font-family: var(--font-family-titles);
+  color: var(--accent-color);
+  font-weight: 400;
+  margin-top: 4rem;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0;
+  }
+
+  .method__section {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+  }
+
+  .method__content {
+    max-width: 100%;
+  }
+
+  .method__img {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+  }
+
+  .method__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    max-height: 400px;
+  }
 }
