adds scroll-down listener effect for nav-mobile

--- a/src/components/layout/header/style.module.css
+++ b/src/components/layout/header/style.module.css
@@ -4,6 +4,9 @@
   top: 0px;
   z-index: 10;
   transition: 0.6s all ease-in-out;
+  @media (max-width: 650px) {
+    position: relative;
+  }
 }
 
 .header_down {
