--- a/src/components/blocks/intro/style.module.css
+++ b/src/components/blocks/intro/style.module.css
@@ -4,7 +4,7 @@ background-color: var(--base-background-color);
 
 .intro__wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   padding: 2em 0;
 }
@@ -18,7 +18,7 @@ background-color: var(--base-background-color);
 }
 
 .intro__img {
-  max-width: 35%;
+  max-width: 45%;
   overflow: hidden;
 }
 
