--- a/src/components/blocks/work-method/style.module.css
+++ b/src/components/blocks/work-method/style.module.css
@@ -1,35 +1,3 @@
-/* .method__wrapper {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  font-size: var(--text-size-base);
-  gap: 5rem;
-}
-
-.method__img {
-  max-width: 45%;
-  overflow: hidden;
-}
-
-.method__img img {
-  display: block;
-  width: 100%;
-  object-fit: cover;
-}
-
-.method__content {
-  display: flex;
-  flex-basis: 50%;
-  flex-direction: column;
-  height: 100%;
-}
-
-.method__highlight {
-  font-family: var(--font-family-titles);
-  color: var(--accent-color);
-  font-weight: 400;
-  margin-top: 4rem;
-} */
 .method__section {
   display: flex;
   flex-wrap: wrap;
@@ -62,6 +30,12 @@
   color: var(--accent-color);
   font-weight: 400;
   margin-top: 4rem;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    padding: 0;
+  }
 }
 
 @media (max-width: 768px) {
