--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -36,5 +36,10 @@
 
 .footer__copyright {
   font-size: 1.2rem;
+}
+
+.footer__copyright a {
+  font-size: 1.4rem;
   text-decoration: none;
+  color: var(--link-color);
 }
