--- a/src/components/blocks/payment/style.module.css
+++ b/src/components/blocks/payment/style.module.css
@@ -23,7 +23,7 @@
 
 .payment__left {
   display: flex;
-  align-items: center;
+  vertical-align: center;
   width: 60%;
 
   @media (max-width: 500px) {
@@ -74,7 +74,7 @@
 .payment__button {
   margin: 0 auto;
   max-width: 280px;
-  
+
   @media (min-width: 451px) {
     max-width: 380px;
   }
