--- a/src/components/blocks/intro/style.module.css
+++ b/src/components/blocks/intro/style.module.css
@@ -1,6 +1,10 @@
 .intro {
 background-color: var(--base-background-color);
 }
+.intro__title {
+  color: var(--secondary-color);
+  font-weight: 400;
+}
 
 .intro__wrapper {
   display: flex;
