--- a/src/components/blocks/test-list/style.module.css
+++ b/src/components/blocks/test-list/style.module.css
@@ -3,6 +3,10 @@
   background-color: var(--white-color);
   padding-top: calc(2 * var(--space-xxl));
   padding-bottom: calc(2 * var(--space-xxl));
+  @media (max-width: 800px) {
+    padding-top: calc(3 * var(--space-s));
+    padding-bottom: calc(3 * var(--space-s));
+  }
 }
 
 .tests__link {
