--- a/src/components/ui/title/style.module.css
+++ b/src/components/ui/title/style.module.css
@@ -22,7 +22,7 @@
 }
 
 :global .title_small {
-  font-size: 2.5rem;
+  font-size: 3rem;
   @media (max-width: 450px) {
     font-size: 1.5rem;
   }
@@ -33,10 +33,11 @@
 }
 
 :global .title_big {
-  font-size: 4rem;
+  font-size: 6rem;
   text-transform: uppercase;
   line-height: 120%;
   letter-spacing: 3px;
+  font-weight: 500;
 
   @media (max-width: 450px) {
     font-size: 1.7rem;
@@ -48,5 +49,9 @@
 
   @media (min-width: 571px) and (max-width: 820px) {
     font-size: 3.3rem;
+  }
+
+  @media (min-width: 821px) and (max-width: 1050px) {
+    font-size: 4.6rem;
   }
 }
