--- a/src/components/blocks/consultations/style.module.css
+++ b/src/components/blocks/consultations/style.module.css
@@ -42,11 +42,11 @@
 }
 
 .block_fill {
-  background-color: var(--block-background-color);
+  background-color: var(--white-color);
 }
 
 .block_outlined {
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--highlight-color);
 }
 
 .item:not(:last-child) {
