--- a/src/components/blocks/nav/style.module.css
+++ b/src/components/blocks/nav/style.module.css
@@ -1,10 +1,10 @@
 .menu__link {
-  color: var(--secondary-color);
+  color: var(--accent-color);
   text-decoration: none;
 
   &:hover {
     cursor: pointer;
-    color: var(--accent-color);
+    color: var(--highlight-color);
   }
 }
 
@@ -22,7 +22,7 @@ nav::after {
   display: block;
   width: 100%;
   height: 2px;
-  background: var(--highlight-color);
+  background: var(--accent-color);
   margin: 10px auto 0;
 }
 
@@ -55,7 +55,7 @@ nav::after {
   width: 300px;
   z-index: 100;
   position: absolute;
-  background-color: var(--modal-background-color);
+  background-color: var(--accent-color);
   border-radius: 10px;
   box-shadow: 0px 5px 10px 0px rgba(61, 61, 61, 0.5);
   padding: 2rem 2rem;
