--- a/src/components/layout/header/style.module.css
+++ b/src/components/layout/header/style.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #fbf7f2;
+  background-color: var(--base-background-color);
   position: sticky;
   top: 0px;
   z-index: 10;
