--- a/src/components/ui/button/style.module.css
+++ b/src/components/ui/button/style.module.css
@@ -17,7 +17,7 @@
     box-shadow 0.2s ease-out;
 
   &:hover {
-    background-color: rgb(79, 160, 251, 0.7);
+    background-color: var(--button-hover-color);
   }
 
   &:active {
