--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -7,39 +7,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
   gap: 1rem;
-  font-size: var(--text-size-base);
 }
 
 .footer__wrapper p {
   margin: 0;
 }
 
-.footer__icon {
-  height: 30px;
-}
-
-.footer__link,
 .footer__createdby {
   text-decoration: none;
-}
+  color: var(--text-color-base);
 
-.footer__link {
-  color: var(--link-color);
-}
-
-.footer__link:hover,
-.footer__createdby:hover {
-  color: var(--accent-color);
+  &:hover {
+    color: var(--accent-color);
+    text-decoration: underline;
+  }
 }
 
 .footer__copyright {
   font-size: 1.2rem;
-}
-
-.footer__copyright a {
-  font-size: 1.4rem;
-  text-decoration: none;
-  color: var(--link-color);
 }
