--- a/src/components/blocks/payment/style.module.css
+++ b/src/components/blocks/payment/style.module.css
@@ -1,5 +1,4 @@
 .payment {
-  background-color: var(--base-background-color);
   padding-top: calc(2 * var(--space-xxl));
   padding-bottom: calc(2 * var(--space-xxl));
 
@@ -57,6 +56,7 @@
   align-items: center;
   gap: 30px;
   color: var(--accent-color);
+  text-transform: uppercase;
 
   @media (max-width: 700px) {
     gap: 15px;
