moves language switching buttons to a separate directory in "blocks" as Component

--- a/src/components/blocks/modal/style.module.css
+++ b/src/components/blocks/modal/style.module.css
@@ -93,7 +93,7 @@
   left: 84%;
 }
 
-.button__lang {
+.lang_buttons__box button {
   border-radius: 50%;
   background-color: var(--highlight-color);
   padding: 1rem 1rem;
