--- a/src/components/blocks/intro/style.module.css
+++ b/src/components/blocks/intro/style.module.css
@@ -8,7 +8,7 @@
 
 .intro__wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   padding: 2em 0;
 }
