--- a/src/components/blocks/about/style.module.css
+++ b/src/components/blocks/about/style.module.css
@@ -1,6 +1,6 @@
 .about {
-  padding-top: calc(2 * var(--space-xxl));
-  padding-bottom: calc(2 * var(--space-xxl));
+  padding-top: calc(2 * var(--space-l));
+  padding-bottom: calc(2 * var(--space-l));
 
   @media (max-width: 800px) {
     padding-top: calc(3 * var(--space-s));
