--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding-bottom: 5rem;
+  /* padding-bottom: 5rem; */
 }
 
 .footer__wrapper p {
