--- a/src/components/blocks/lang-toggle/style.module.css
+++ b/src/components/blocks/lang-toggle/style.module.css
@@ -3,6 +3,7 @@
   padding: 1rem 1rem;
   margin: 1rem 0.2rem;
   font-size: 1.2rem;
+  text-transform: uppercase;
   @media (max-width: 650px) {
     font-size: 0.9rem;
   }
