--- a/src/components/layout/footer/style.module.css
+++ b/src/components/layout/footer/style.module.css
@@ -8,7 +8,12 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  /* padding-bottom: 5rem; */
+}
+
+@-moz-document url-prefix() {
+  .footer__wrapper {
+    padding-bottom: 4rem;
+  }
 }
 
 .footer__wrapper p {
