--- a/src/components/layout/header/style.module.css
+++ b/src/components/layout/header/style.module.css
@@ -21,7 +21,7 @@
   padding: 40px 0 20px 0;
 
   @media (max-width: 650px) {
-    padding: 0;
+    padding: 10px 0 0 0;
     display: flex;
     justify-content: space-between;
   }
